# sapiens

./: Dockerfile  README.md  pyproject.toml  requirements.txt
configs/: modelconfig.toml  modelconfig.yml  train_config.toml
datasets/: .gitignore
datasets/BIOSSES/: all.tsv  biosses.json  biosses.tsv  test_biosses.json  train_biosses.json  val_biosses.json
datasets/CL/: CL.json
datasets/CL/test/: test_CL.json
datasets/CL/train/: train_CL.json
datasets/CL/val/: val_CL.json
datasets/CRAFT/: version.info
datasets/GO/: GO_BP.json
datasets/GO/test/: test_GO_BP.json
datasets/GO/train/: train_GO_BP.json
datasets/GO/val/: val_GO_BP.json
datasets/MsigDB/: c7_scored.json  info.txt
datasets/test/: test_GO_BP.json
imported_gitlab_wiki/: API-docs.md  Building-an-index.md  Datasets.md  Installation.md  Pipeline-overview.md  ResCNN-model-overview.md  TOC.md  Training-ResCNN-model.md  _sidebar.md  home.md
notebooks/: cnn_tests.ipynb  msigdb_test.ipynb
resources/: .gitignore
resources/genes/: hgnc_slim.json  version.info
resources/index/: .gitignore
resources/pathways/: info.txt  keywords.json
resources/xrefs/: hamap2go.json  umls2go.json  version.info
sapiens/: cnn.py  data.py  index.py  loss.py  semantic.py  stringops.py  train_sent.py  utils.py
scripts/: .gitignore
scripts/index/: evaluate.py  generate_index_lsa.py  generate_index_rescnn.py
scripts/misc/: fit_lsa.py  pubmed.py
scripts/preprocess/: filter_CRAFT.py  filter_MedMen.py  process_CL.py  process_CRAFT.py  process_GO.py  process_MedMen.py  utils.py
(+3 files in other folders)
